# MarkdownComments

./: .editorconfig  .gitignore  AGENTS.md  README.md
.github/: copilot-instructions.md
.github/agents/: anna.md  david.md  dor.md  elon.md  mark.md  may.md  maya.md  sam.md  yulia.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/crates/mdc-core/: Cargo.toml
core/crates/mdc-core/src/: anchor.rs  diagnostics.rs  edit.rs  emit.rs  ids.rs  lib.rs  model.rs  text.rs
core/crates/mdc-core/src/parse/: conflict.rs  mod.rs  scan.rs  yaml.rs
core/crates/mdc-core/tests/: format_examples.rs
core/crates/mdc-wasm/: Cargo.toml
core/crates/mdc-wasm/src/: lib.rs
docs/: architecture.md  format.md  implementation-plan.md  product-brief.md  squad.md
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
extension/media/: panel.css  panel.js  preview.css  preview.js  previewReveal.js
extension/scripts/: package.js  stamp-version.js
extension/src/: extension.ts
extension/src/comments/: commentController.ts  decorations.ts  diagnostics.ts  edits.ts  fenceFoldRanges.d.ts  fenceFoldRanges.js  fenceFolding.ts  threadFocus.d.ts  threadFocus.js
extension/src/core/: types.ts  wasmBridge.ts
extension/src/model/: identity.ts
extension/src/preview/: activeTabKind.d.ts  activeTabKind.js  builtInPreviewRefresh.d.ts  builtInPreviewRefresh.js  cardRender.ts  commentEditController.ts  commentsSidebar.ts  customPreviewTarget.d.ts  (+11 more)
extension/test/: runTest.js
squad/: agents.yml
(+18 files in other folders)
