[package]
name = "mdc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core parsing, anchoring, validation, and edit synthesis for MarkdownComments."

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
insta = "1"
