[package]
name = "mdc-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings exposing the MarkdownComments core to the VS Code extension."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mdc-core = { path = "../mdc-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
